--- a/src/main/resources/assets/mobs/lang/en_us.json
+++ b/src/main/resources/assets/mobs/lang/en_us.json
@@ -1,8 +1,4 @@
 {
   "entity.mobs.ant": "Ant",
-  "entity.mobs.suricato": "Suricato",
-  "item.mobs.ant_spawn_egg": "Ant Spawn Egg",
-  "item.mobs.suricato_spawn_egg": "Suricato Spawn Egg",
-  "entity.mobs.toucan": "Toucan",
-  "item.mobs.toucan_spawn_egg": "Toucan Spawn Egg"
+  "item.mobs.ant_spawn_egg": "Ant Spawn Egg"
 }
